[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2txt==0.9",
    "gradio==6.2.0",
    "langchain==1.2.0",
    "langchain-chroma==1.1.0",
    "langchain-community==0.4.1",
    "langchain-huggingface==1.2.0",
    "langchain-ollama==1.0.1",
    "langchain-text-splitters==1.1.0",
    "openpyxl==3.1.5",
    "pypdf==6.5.0",
    "python-pptx==1.0.2",
    "pyyaml==6.0.3",
    "sentence-transformers==4.0.2",
    "sentencepiece==0.2.1",
    "unstructured==0.18.21",
]
